# sg-property-analytics

./: .gitignore  .migration-allowlist  .vercel-deploy-trigger  ARCHITECTURE.md  AUDIT_REPORT.md  CENTRALIZED_STATE_COMPLETE.md  CHART_MIGRATION_CHECKLIST.md  CLAUDE.md  CLEANUP_AUDIT.md  CLEANUP_COMPLETE.md  COMPLIANCE_REVIEW_REPORT.md  CONTRACT_ASYNC_SAFETY.md  CONTRACT_DEPRECATION.md  DATA_PIPELINE_AUDIT.md  DATA_QUALITY_REPORT_2025-12-29.md  DEAD_CODE_AUDIT.md  DEPRECATED.md  DESIGN_BRANDING_GUIDELINES.md  ETL_ARCHITECTURE.md  FILTER_SIMPLIFICATION_PLAN.md  FRONTEND_AUDIT.md  FRONTEND_ENGINEERING_WORKS.md  FRONTEND_STATUS.md  INGESTION_ARCHITECTURE.md  LEGAL_COMPLIANCE.md  LOADING_STATE_AUDIT_REPORT.md  NEW_LAUNCH_PAGE_INVESTIGATION.md  PARAM_PYDANTIC.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_CHECKLIST.md  PHASE3_ZUSTAND_MIGRATION_PLAN.md  POWER_BI_PATTERNS.md  REACT_PORT_COMPLETE.md  README.md  REPO_MAP.md  ROUTE_FILTER_AUDIT.md  SAAS_SETUP_COMPLETE.md  SETUP_DATA.md  SQLITE_MIGRATION_AUDIT.md  SQL_BEST_PRACTICES.md  (+20 more)
.claude/: CONSOLIDATION_PLAN.md  REVIEW_WORKFLOW_IMPLEMENTATION.md  review-rules.yml  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
backend/: app.py  cli.py  config.py  constants.py  contracts_manifest.sha256  pytest.ini  requirements.txt  validate_new_vs_resale.py
data_validation/: FILTER_VALIDATION_REPORT.md  __init__.py  filter_checks.sql  filter_state_tester.py  market_pulse_filter_tester.py  validate_api_endpoints.py
docs/: API_ENDPOINT_CLEANUP_PLAN.md  AUTH_DECISION_FRAMEWORK.md  AUTH_STABILITY_AUDIT.md  CODE_PATTERNS.md  DEPLOYMENT.md  (+18 more)
(+946 files in other folders)
